--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -11,10 +11,10 @@ jobs:
         uses: actions/setup-go@v4
         with:
           go-version: "1.22"
-          cache-dependency-path: server/go.sum
+          cache-dependency-path: go.sum
 
-      # - name: lint
-      #   run: task lint
+      - name: lint
+        run: task lint
 
       - name: Run tests
-        run: go test -v ./...
+        run: task test:all
