golint in ci directly

--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -21,8 +21,10 @@ jobs:
           version: 3.x
           repo-token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: lint
-        run: task lint
+      - name: golangci-lint
+        uses: golangci/golangci-lint-action@v4
+        with:
+          version: latest
 
       - name: Run tests
         run: task test:all
