--- a/examples/Taskfile.yml
+++ b/examples/Taskfile.yml
@@ -25,8 +25,8 @@ tasks:
   fmt:
     desc: Run goimports
     cmds:
-      # - go mod tidy
-      - go run golang.org/x/tools/cmd/goimports@v0.18.0 -w -local github.com/will-wow/typed-htmx-go/examples .
+      - go mod tidy
+      - go run golang.org/x/tools/cmd/goimports@v0.20.0 -w -local github.com/will-wow/typed-htmx-go/examples .
 
   test:
     desc: Run test suite
