document extensions, and extract and test some utils

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,5 @@
 {
   "go.lintTool": "golangci-lint",
   "go.lintFlags": ["--fast"],
-  "cSpell.words": [
-		"classtools",
-		"gomponents"
-	]
+  "cSpell.words": ["classtools", "gomponents"]
 }
