--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,11 @@
 {
   "go.lintTool": "golangci-lint",
   "go.lintFlags": ["--fast"],
-  "cSpell.words": ["classtools", "eventheader", "templ", "gomponents"]
+  "cSpell.words": [
+    "classtools",
+    "eventheader",
+    "gomponents",
+    "responsetargets",
+    "templ"
+  ]
 }
